# mental-disorder-classification-project

./: 02_model_training_comparison.ipynb  03_best_model_pipeline.ipynb  EDA_utils.py  app.py  clf_svc_model.pkl  dataset_download.py  pyproject.toml
dataset/: preprocessed_dataset.csv
