[project]
name = "ml-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Garaycochea",email = "fgarayco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
ipykernel = "^6.29.5"
kaggle = "^1.7.4.5"
pandas = "<2.2"
matplotlib = "^3.10.3"
numpy = "^1.21.0"
seaborn = "^0.13.2"
scipy = "^1.15.3"
scikit-learn = "^1.6.1"
plotly = "^6.1.0"
nbformat = "^5.10.4"
graphviz = "^0.20.3"
yellowbrick = "^1.5"
imbalanced-learn = "^0.13.0"
streamlit = "^1.45.1"
